tests/diagnostics/naming/underscore_prefix/used_underscore_parameter/expect.txt
# exit: 1
input/main.lang0:1:15: error: bindings prefixed with '_' must be unused: '_value' is used
  function demo(_value: int64) -> int64 {
                ^
